flex/flex-tests/testData/js2_highlighting/FunctionWithModifierNotUnderClass.js2
<warning descr="Access modifier allowed for class members only">public</warning> function clearSky() :void {
<error descr="Access modifier allowed for class members only">private</error> function removeCloud(cloud:Cloud, index:int, vector:Vector.<Cloud>):void {
}
}

class Cloud {}
class Vector {}

internal class B {}